--- a/test.html
+++ b/test.html
@@ -428,7 +428,7 @@
 <body>
     <div class="header-wrapper">
         <div class="header">
-            <img src="img_1896.png" class="logo-img" alt="Patholytica Logo" onclick="window.location.href='index.html'">
+            <img src="IMG_1896.png" class="logo-img" alt="Patholytica Logo" onclick="window.location.href='index.html'">
             <div class="header-actions">
                 <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
                     <i class="fas fa-circle-half-stroke"></i>
