--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Article Scroller - Patholytica</title>
@@ -46,26 +47,30 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    background: var(--bg-color);
+    background: transparent;
     padding-top: env(safe-area-inset-top);
     z-index: 40;
     width: 100%;
+    height: 44px;
+    pointer-events: none;
 }
 
 .header {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 2px 16px;
+    padding: 4px 16px;
     max-width: 100%;
     margin: 0 auto;
+    height: 100%;
+    pointer-events: none;
 }
 
 .icon-btn {
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background: transparent;
+    background: var(--bg-color);
     border: none;
     color: var(--text-primary);
     cursor: pointer;
@@ -74,6 +79,8 @@ body {
     justify-content: center;
     font-size: 16px;
     transition: background 0.2s ease;
+    pointer-events: all;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .icon-btn:hover {
@@ -96,7 +103,7 @@ body {
     height: 100vh;
     background: var(--bg-color);
     overflow: hidden;
-    padding-top: 44px;
+    padding-top: 0;
 }
 
 .posts-wrapper {
@@ -116,7 +123,8 @@ body {
     scroll-snap-align: start;
     scroll-snap-stop: always;
     background: var(--bg-color);
-    padding: 20px 20px 100px;
+    padding: 8px 20px 100px;
+    padding-top: 4px;
     display: flex;
     flex-direction: column;
 }
@@ -126,6 +134,9 @@ body {
     align-items: center;
     gap: 12px;
     margin-bottom: 20px;
+    flex-shrink: 0;
+    position: relative;
+    z-index: 50;
 }
 
 .author-avatar {
@@ -308,7 +319,7 @@ body {
 .action-buttons {
     position: absolute;
     right: 16px;
-    bottom: 140px;
+    bottom: 143px;
     display: flex;
     flex-direction: column;
     gap: 20px;
