--- a/test2.html
+++ b/test2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=yes">
     <title>Article Scroller - Patholytica</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -40,17 +40,21 @@ body {
     color: var(--text-primary);
     overflow: hidden;
     transition: background 0.2s ease, color 0.2s ease;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 .header-wrapper {
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background: var(--bg-color);
     padding-top: env(safe-area-inset-top);
-    z-index: 40;
+    z-index: 30;
     width: 100%;
+    max-width: 450px;
     height: 44px;
 }
 
@@ -68,7 +72,7 @@ body {
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background: transparent;
+    background: var(--hover-bg);
     border: none;
     color: var(--text-primary);
     cursor: pointer;
@@ -80,26 +84,26 @@ body {
 }
 
 .icon-btn:hover {
-    background: var(--hover-bg);
+    background: var(--border-color);
 }
 
 .app-container {
-    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 450px;
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background: var(--bg-color);
 }
 
 .scroller-container {
     position: relative;
     width: 100%;
-    max-width: 450px;
     height: 100vh;
     background: var(--bg-color);
     overflow: hidden;
-    padding-top: 44px;
 }
 
 .posts-wrapper {
@@ -131,6 +135,8 @@ body {
     gap: 12px;
     margin-bottom: 20px;
     flex-shrink: 0;
+    position: relative;
+    z-index: 50;
 }
 
 .author-avatar {
@@ -313,7 +319,7 @@ body {
 .action-buttons {
     position: absolute;
     right: 16px;
-    bottom: 140px;
+    bottom: 143px;
     display: flex;
     flex-direction: column;
     gap: 20px;
