--- a/test3.html
+++ b/test3.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=yes">
-    <title>Article Scroller - Patholytica</title>
+    <title>Article Scroller - Patholyica</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
@@ -55,7 +55,7 @@ body {
     z-index: 30;
     width: 100%;
     max-width: 450px;
-    height: 44px;
+    height: 0.25px;
 }
 
 .header {
@@ -123,7 +123,8 @@ body {
     scroll-snap-align: start;
     scroll-snap-stop: always;
     background: var(--bg-color);
-    padding: 52px 20px 100px;
+    padding: 8px 20px 100px;
+    padding-top: 4px;
     display: flex;
     flex-direction: column;
 }
