--- a/test3.html
+++ b/test3.html
@@ -3,7 +3,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Article Scroller - Patholyica</title>
+    <title>Article Scroller - Patholytica</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
@@ -36,7 +36,7 @@ body.light-theme {
   }
 
 body {
-font-family: -apple-system, BlinkMacSystemFont, ‘Segoe UI’, Roboto, sans-serif;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 background: var(–bg-color);
 color: var(–text-primary);
 overflow: hidden;
@@ -48,7 +48,7 @@ position: fixed;
 top: 0;
 left: 0;
 right: 0;
-background: var(–bg-color);
+background: var(--card-bg);
 padding-top: env(safe-area-inset-top);
 z-index: 40;
 width: 100%;
@@ -629,9 +629,6 @@ pointer-events: all;
 <body>
     <div class="header-wrapper">
         <div class="header">
-            <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
-                <i class="fas fa-circle-half-stroke"></i>
-            </button>
         </div>
     </div><div class="app-container">
     <div class="scroller-container">
@@ -687,7 +684,6 @@ pointer-events: all;
         onAuthStateChanged
     } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-```
 // Firebase configuration
 const firebaseConfig = {
     apiKey: "AIzaSyBs6V0yY14cuLBXB1nciZ-X0eyAiodC-Ak",
@@ -1268,15 +1264,8 @@ function handleScroll(e) {
 }
 
 loadArticles(true);
-```
 
 </script><script>
-function toggleTheme() {
-document.body.classList.toggle(‘light-theme’);
-localStorage.setItem(“theme”, document.body.classList.contains(“light-theme”) ? “light” : “dark”);
-}
-
-```
 if (localStorage.getItem("theme") === "light") {
     document.body.classList.add("light-theme");
 }
@@ -1316,7 +1305,6 @@ window.seekAudio = function(event, container, audioId) {
     const percentage = x / rect.width;
     audio.currentTime = percentage * audio.duration;
 };
-```
 
 </script></body>
 
