--- a/explore.html
+++ b/explore.html
@@ -559,7 +559,7 @@ body {
       <button class="filter-tab active" data-filter="all">All</button>
       <button class="filter-tab" data-filter="users">Users</button>
       <button class="filter-tab" data-filter="articles">Articles</button>
-      <button class="filter-tab" data-filter="article-content">Article Content</button>
+      <button class="filter-tab" data-filter="article-content">Content</button>
       <button class="filter-tab" data-filter="playlists">Libraries</button>
     </div>
   </div>
